ajout de la route pour récupérer l'ensemble des dossiers d'un utilisateur
