# routes/api.php
@@ -15,6 +15,7 @@ Route::middleware('auth:sanctum')->group(function () {
 
     //FOLDERS
     Route::resource('folders', \App\Http\Controllers\API\FolderController::class);
+    Route::get('folders-of-user', [\App\Http\Controllers\API\FolderController::class, 'indexByUser']);
 
     //CARDS
     Route::resource('cards', \App\Http\Controllers\API\CardController::class);
